--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -13,6 +13,13 @@ jobs:
       
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Nerdbank.GitVersioning
+      uses: dotnet/nbgv@v0.4.0
+      with:
+        setAllVars: true
 
     - name: 🧰 Setup .NET build dependencies
       uses: timheuer/bootstrap-dotnet@v1
