--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -17,7 +17,7 @@ jobs:
         fetch-depth: 0
 
     - name: Nerdbank.GitVersioning
-      uses: dotnet/nbgv@v0.4.0
+      uses: dotnet/nbgv@e6830c173ef6061fe122d7205ac31bb2f8cca842
       with:
         setAllVars: true
 
