--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,8 +25,26 @@ jobs:
       with:
         name: ${{ github.event.repository.name }}.vsix
     
-    - name: Upload to Open VSIX
+    - name: Upload to VsixGallery
       uses: timheuer/openvsixpublish@v1
       with:
         vsix-file: ${{ github.event.repository.name }}.vsix
+
+    - name: Tag and Release
+      id: tag_release
+      uses: softprops/action-gh-release@v1
+      with:
+        body: Release ${{ needs.build.outputs.version }}
+        tag_name: ${{ needs.build.outputs.version }}
+        generate_release_notes: true
+        files: |
+          **/*.vsix
+
+    - name: Publish extension to Marketplace
+      #if: ${{ contains(github.event.head_commit.message, '[release]') }}
+      uses: cezarypiatek/VsixPublisherAction@0.1
+      with:
+        extension-file: '${{ github.event.repository.name }}.vsix'
+        publish-manifest-file: 'vs-publish.json'
+        personal-access-code: ${{ secrets.VS_PUBLISHER_ACCESS_TOKEN }}
     
