--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,10 @@ jobs:
         VERSION: ${{ needs.build.outputs.version }}
 
     steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
     - name: Download Package artifact
       uses: actions/download-artifact@v3
       with:
