Fixing publish versions [skip ci]

--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -1,7 +1,12 @@
 ﻿name: "Base build"
 
-on: workflow_call
-      
+on: 
+  workflow_call:
+    outputs:
+        version: 
+          description: 'Version of the build'
+          value: ${{ jobs.build.outputs.version) }}
+
 jobs:
   build:
     outputs:
