Adding dispatch for core build [skip ci]

--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -6,6 +6,10 @@ on:
         version: 
           description: 'Version of the build'
           value: ${{ jobs.build.outputs.version }}
+  workflow_dispatch:
+      inputs:
+        Reason:
+            description: 'Reason for the build'
 
 jobs:
   build:
