Starting on Environments - Starting on #17 but blocked by API in package used, still will display them - Added counts to other things

--- a/src/GitHubActionsVS.csproj
+++ b/src/GitHubActionsVS.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Helpers\CredentialManager.cs" />
     <Compile Include="Helpers\RepoInfo.cs" />
     <Compile Include="Models\BaseWorkflowType.cs" />
+    <Compile Include="Models\SimpleEnvironment.cs" />
     <Compile Include="Models\SimpleJob.cs" />
     <Compile Include="Models\SimpleRun.cs" />
     <Compile Include="Options\ExtensionOptions.cs" />
