--- a/src/GitHubActionsVS.csproj
+++ b/src/GitHubActionsVS.csproj
@@ -147,6 +147,9 @@
     <PackageReference Include="Emoji.Wpf">
       <Version>0.3.4</Version>
     </PackageReference>
+    <PackageReference Include="Humanizer">
+      <Version>2.14.1</Version>
+    </PackageReference>
     <PackageReference Include="LibGit2Sharp">
       <Version>0.27.2</Version>
     </PackageReference>
@@ -163,7 +166,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Octokit">
-      <Version>7.0.1</Version>
+      <Version>7.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sodium.Core">
       <Version>1.3.3</Version>
