Fixing workflow errors [skip ci]

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,13 +1,6 @@
 name: "Publish"
 
-on:
-  workflow_dispatch:
-    branches:
-      - main
-    paths-ignore:
-      - '**/*.md'
-      - '**/*.gitignore'
-      - '**/*.gitattributes'
+on: workflow_dispatch
       
 jobs:
   build:
