Adding environment output for summary [skip ci]

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,6 +9,9 @@ jobs:
 
   publish:
     needs: build
+    environment:
+      name: production
+      url: https://marketplace.visualstudio.com/items?itemName=TimHeuer.GitHubActionsVS
     name: Publish
     runs-on: windows-2022
     permissions:
