Fixing var conflict in workflow

--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -41,7 +41,7 @@ jobs:
         msbuild: 'true'
 
     - name: Increment VSIX version
-      id: vsix_version
+      id: vsix_version_stamp
       uses: timheuer/vsix-version-stamp@v2
       with:
         manifest-file: ${{ env.VsixManifestPath }}
