--- a/src/GitHubActionsVS.csproj
+++ b/src/GitHubActionsVS.csproj
@@ -55,10 +55,14 @@
     <Compile Include="Helpers\ConclusionFilter.cs" />
     <Compile Include="Helpers\CredentialManager.cs" />
     <Compile Include="Helpers\RepoInfo.cs" />
+    <Compile Include="Helpers\StringHelpers.cs" />
+    <Compile Include="Helpers\YamlHelpers.cs" />
     <Compile Include="Models\BaseWorkflowType.cs" />
+    <Compile Include="Models\InputMetadata.cs" />
     <Compile Include="Models\SimpleEnvironment.cs" />
     <Compile Include="Models\SimpleJob.cs" />
     <Compile Include="Models\SimpleRun.cs" />
+    <Compile Include="Models\Workflow.cs" />
     <Compile Include="Options\ExtensionOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\ActionsToolWindowCommand.cs" />
@@ -81,6 +85,9 @@
     <Compile Include="ToolWindows\ToolWindowMessenger.cs" />
     <Compile Include="UserControls\AddEditSecret.xaml.cs">
       <DependentUpon>AddEditSecret.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\WorkflowInputsDialog.xaml.cs">
+      <DependentUpon>WorkflowInputsDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="VSCommandTable.cs">
       <AutoGen>True</AutoGen>
@@ -136,6 +143,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControls\WorkflowInputsDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -185,6 +195,9 @@
     </PackageReference>
     <PackageReference Include="Sodium.Core">
       <Version>1.3.3</Version>
+    </PackageReference>
+    <PackageReference Include="YamlDotNet">
+      <Version>16.3.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
