--- a/src/GitHubActionsVS.csproj
+++ b/src/GitHubActionsVS.csproj
@@ -89,7 +89,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="lib\win32\x64\libsodium.dll">
+    <Content Include="runtimes\win-x64\native\libsodium.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
@@ -97,7 +97,7 @@
       <IncludeInVSIX>true</IncludeInVSIX>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="lib\win32\arm64\libsodium.dll">
+    <Content Include="runtimes\win-arm64\native\libsodium.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
@@ -192,7 +192,7 @@
       <Version>7.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sodium.Core">
-      <Version>1.3.3</Version>
+      <Version>1.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
